--- a/environment/development/docker-compose.yml
+++ b/environment/development/docker-compose.yml
@@ -31,9 +31,9 @@ services:
                           grafana-influxdb-08-datasource,\
                           grafana-kairosdb-datasource,\
                           grafana-piechart-panel,\
-                          grafana-simple-json-datasource,\
-                          grafana-worldmap-panel"
+                          grafana-simple-json-datasource"
       GF_SECURITY_ADMIN_USER: $GF_SECURITY_ADMIN_USER  # nom de l'utilisateur créé par défaut pour accéder à Grafana
       GF_SECURITY_ADMIN_PASSWORD: $GF_SECURITY_ADMIN_PASSWORD  # mot de passe de l'utilisateur créé par défaut pour accéder à Grafana
     volumes:
       - ./grafana:/var/lib/grafana
+      - ./provisioning:/etc/grafana/provisioning
