Fix config and provisioning; still not working o.O

--- a/environment/development/.env
+++ b/environment/development/.env
@@ -3,5 +3,6 @@ DOCKER_INFLUXDB_INIT_USERNAME=augustin
 DOCKER_INFLUXDB_INIT_PASSWORD=augustin_influx
 DOCKER_INFLUXDB_INIT_ORG=omegawatt
 DOCKER_INFLUXDB_INIT_BUCKET=defaultBucket
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=0m3g4w4tT
 GF_SECURITY_ADMIN_USER=augustin
 GF_SECURITY_ADMIN_PASSWORD=augustin_grafana
