implement socomec parser and use influxdb client

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "omegawatt",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Augustin Ragon",
-  "license": "MIT",
-  "scripts": {
-    "compose": "docker-compose -f ./environment/development/docker-compose.yml up"
-  }
+	"name": "omegawatt",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Augustin Ragon",
+	"license": "MIT",
+	"scripts": {
+		"compose": "docker-compose up --build",
+		"start": "node src/index.js"
+	},
+	"dependencies": {
+		"@influxdata/influxdb-client": "^1.14.0",
+		"dotenv": "^10.0.0",
+		"pino": "^6.11.3"
+	}
 }
