--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-	"name": "omegawatt",
-	"version": "1.0.0",
-	"main": "index.js",
-	"author": "Augustin Ragon",
-	"license": "MIT",
-	"scripts": {
-		"compose": "docker-compose up --build",
-		"start": "node src/index.js"
-	},
-	"dependencies": {
-		"@influxdata/influxdb-client": "^1.14.0",
-		"dotenv": "^10.0.0",
-		"pino": "^6.11.3"
-	}
+  "name": "omegawatt",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Thomas Glatt",
+  "contributors": [
+    "Augustin Ragon <augustin.ragon@gmail.com>"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "compose": "docker-compose up --build",
+    "start": "node src/index.js"
+  },
+  "dependencies": {
+    "@influxdata/influxdb-client": "^1.14.0",
+    "dotenv": "^10.0.0",
+    "pino": "^6.11.3"
+  }
 }
