--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@influxdata/influxdb-client": "^1.14.0",
     "dotenv": "^10.0.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "pino": "^6.11.3"
   }
 }
