feat: handle project by customer

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,3 @@
-DIR_PATH=data-dir-path
-
 INFLUXDB_URL=http://localhost:8086
 INFLUXDB_USERNAME=influxdb_user
 INFLUXDB_PASSWORD=influxdb_password
@@ -9,3 +7,5 @@ INFLUXDB_ADMIN_TOKEN=0m3g4w4tT
 
 GF_SECURITY_ADMIN_USER=gf_user
 GF_SECURITY_ADMIN_PASSWORD=gf_passwword
+
+CUSTOMERS=[{"bucket": "herbier","dirPath": "path-to-data-dir"}]
