--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "scripts": {
     "compose": "docker-compose up --build",
+    "lint:js": "eslint_d --fix '**/*.js' '*.js'",
     "start": "node src/index.js"
   },
   "dependencies": {
@@ -17,5 +18,18 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "pino": "^6.11.3"
+  },
+  "devDependencies": {
+    "@types/node": "^16.3.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint_d": "^5.0.0",
+    "prettier": "^2.3.2",
+    "prettier_d": "^5.7.4",
+    "typescript": "^3.8.3"
   }
 }
