--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,9 @@
   "env": {
     "node": true
   },
-  "files": ["*.ts", "*.tsx"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["tsconfig.eslint.json"],
+    "project": ["tsconfig.json"],
     "sourceType": "module"
   },
   "plugins": ["prettier", "@typescript-eslint"],
@@ -82,7 +81,7 @@
     "@typescript-eslint/no-unsafe-call": "off",
     "@typescript-eslint/require-await": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
-    "@typescript-eslint/restrict-plus-operands": true,
+    "@typescript-eslint/restrict-plus-operands": "error",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off"
   }
