--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,6 +80,7 @@
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-unsafe-call": "off",
     "@typescript-eslint/require-await": "off",
+    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/restrict-plus-operands": "error",
     "@typescript-eslint/no-explicit-any": "off",
