--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "compose": "docker-compose up --build",
     "lint": "eslint_d --fix '**/*.js'",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "mocha test/**/*.js --ui bdd --reporter spec --colors --watch --watch-files 'test/' 'src/'"
   },
   "dependencies": {
     "@influxdata/influxdb-client": "^1.14.0",
@@ -20,14 +21,18 @@
     "pino": "^6.11.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^8.2.3",
     "@types/node": "^16.3.1",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
+    "chai": "^4.3.4",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint_d": "^5.0.0",
+    "mocha": "^9.0.2",
     "prettier": "^2.3.2",
     "prettier_d": "^5.7.4",
     "typescript": "^3.8.3"
