--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@influxdata/influxdb-client": "^1.14.0",
+    "csv-parse": "^4.16.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
