--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csv-parse": "^4.16.0",
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
+    "luxon": "^2.0.2",
     "path": "^0.12.7",
     "pino": "^6.11.3"
   },
