--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,9 @@ services:
                           grafana-kairosdb-datasource,\
                           grafana-piechart-panel,\
                           grafana-simple-json-datasource"
+      GF_DATE_FORMATS_INTERVAL_HOUR : "DD/MM HH:mm" 
+      GF_DATE_FORMATS_INTERVAL_DAY : "DD/MM" 
+      GF_DATE_FORMATS_INTERVAL_MONTH : "MM/YYYY" 
       GF_SECURITY_ADMIN_USER: $GF_SECURITY_ADMIN_USER  # nom de l'utilisateur créé par défaut pour accéder à Grafana
       GF_SECURITY_ADMIN_PASSWORD: $GF_SECURITY_ADMIN_PASSWORD  # mot de passe de l'utilisateur créé par défaut pour accéder à Grafana
     volumes:
