--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "dotenv": "^10.0.0",
     "fs": "^0.0.1-security",
     "luxon": "^2.0.2",
+    "package": "^1.0.1",
+    "package.json": "^2.0.1",
     "path": "^0.12.7",
-    "pino": "^6.11.3"
+    "pino": "^6.11.3",
+    "src": "^1.1.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.21",
@@ -31,10 +34,10 @@
     "@typescript-eslint/parser": "^3.0.0",
     "chai": "^4.3.4",
     "eslint": "^7.30.0",
+    "eslint_d": "^5.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint_d": "^5.0.0",
     "mocha": "^9.0.2",
     "prettier": "^2.3.2",
     "prettier_d": "^5.7.4",
